kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: podsalsa
  name: podsalsa
spec:
  ports:
  - name: podsalsa
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/name: podsalsa
